--- a/style.css
+++ b/style.css
@@ -10,12 +10,14 @@
     position: absolute;
     font-family: Georgia;
     color: white;
+    text-align: center;
 }
 
 .footer {
     background-color:teal;
     border-top: 1px solid brown;
     position: absolute;
+    bottom: 0;
     text-align: center;
 }
 
@@ -31,4 +33,9 @@
 .navbar-side {
     position: sticky;
     top: 600px;
+}
+
+ul .navbar-nav {
+    text-align: left;
+    display: table;
 }
