--- a/styles/style.css
+++ b/styles/style.css
@@ -9,20 +9,24 @@
 
 .footer {
     background-color:teal;
-    border-top: 1px solid brown;
-    position: absolute;
+    border-top: 3px solid brown;
+    position: fixed;
+    width: 100%;
+    height: 30px;
     bottom: 0;
     text-align: center;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .page-border {
     background-color: cadetblue;
 }
 
-.page-main {
+div.page-main {
     background-color: wheat;
-    border-radius: 4px;
+    padding: 30px 10px;
+    border: 5px solid cadetblue;
+    border-radius: 5px;
 }
 
 .navbar-side {
@@ -31,6 +35,11 @@
 }
 
 ul .navbar-nav {
-    text-align: left;
+    text-align: center;
     display: table;
+}
+
+p.page-main {
+    border: 3px solid white;
+    padding: 12px;
 }
