--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 .header {
     background-color: deepskyblue;
     border-bottom: 3px solid dodgerblue;
+    border-radius: 5px;
     position: absolute;
     font-family: Georgia;
     color: white;
@@ -14,18 +15,17 @@
     width: 100%;
     height: 30px;
     bottom: 0;
+    padding: 0px 0px;
     text-align: center;
-    font-size: 15px;
-}
-
-.page-border {
-    background-color: cadetblue;
+    color: white;
+    font-size: 14px;
+    font-family: Georgia;
 }
 
 div.page-main {
     background-color: wheat;
     padding: 30px 10px;
-    border: 5px solid cadetblue;
+    border: 50px 10px solid cadetblue;
     border-radius: 5px;
 }
 
@@ -40,6 +40,5 @@ ul .navbar-nav {
 }
 
 p.page-main {
-    border: 3px solid white;
     padding: 12px;
 }
