--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 
 .footer {
     background-color:teal;
-    border-top: 3px solid brown;
+    border-top: 3px solid dodgerblue;
     position: fixed;
     width: 100%;
     height: 30px;
