--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,14 @@
     background-color: deepskyblue;
     border-bottom: 3px solid dodgerblue;
     border-radius: 5px;
-    position: absolute;
+    position: fixed;
+    width: 100%;
+    height: 50px;
     font-family: Georgia;
     color: white;
-    text-align: center;
-    padding-bottom: 100px;
-    padding-top: 50px;
+    text-align: left;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 .footer {
@@ -17,7 +19,7 @@
     width: 100%;
     height: 30px;
     bottom: 0;
-    padding: 20px 5px;
+    padding: 20px 5px 20px 20px;
     text-align: center;
     color: white;
     font-size: 14px;
@@ -28,10 +30,14 @@
     padding-left: 20px;
 }
 
+.carousel-item {
+    border-radius: 8px;
+}
+
 div.page-main {
     background-color: wheat;
-    padding: 5px 5px;
-    border: 5px solid cadetblue;
+    padding: 25px 10px;
+    border: 10px solid cadetblue;
 }
 
 ul .navbar-nav {
@@ -40,7 +46,10 @@ ul .navbar-nav {
 }
 
 p.page-main {
-    padding: 8px;
+    margin: 10px 5px;
+    padding: 10px;
+    border: 3px solid dodgerblue;
+    border-radius: 7px;
 }
 
 body.container-fluid {
