--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,8 @@
     background-color: deepskyblue;
     border-bottom: 3px solid dodgerblue;
     border-radius: 5px;
-    position: fixed;
     width: 100%;
-    height: 50px;
+    height: 40px;
     font-family: Georgia;
     color: white;
     text-align: left;
@@ -19,7 +18,7 @@
     width: 100%;
     height: 30px;
     bottom: 0;
-    padding: 20px 5px 20px 20px;
+    padding: 15px 5px 20px 5px;
     text-align: center;
     color: white;
     font-size: 14px;
@@ -32,8 +31,8 @@
 
 div.page-main {
     background-color: wheat;
-    padding: 25px 10px;
-    border: 10px solid cadetblue;
+    padding: 35px 10px;
+    border: 15px 10px solid cadetblue;
 }
 
 ul .navbar-nav {
@@ -42,14 +41,13 @@ ul .navbar-nav {
 }
 
 p.page-main {
-    margin: 10px 5px;
     padding: 10px;
     border: 3px solid dodgerblue;
     border-radius: 7px;
 }
 
 body.container-fluid {
-    margin: 5px 0px;
+    
 }
 
 .getCardBtn {
