--- a/styles/style.css
+++ b/styles/style.css
@@ -56,8 +56,11 @@ body.container-fluid {
     padding-left: 30px;
 }
 
-.penguinCarousel img {
-    width: 900px;
+.carousel-item img {
+    width: 50%;
     height: 600px;
     max-height: 600px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
